--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+kotlin.code.style=official
+
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
